增加删除文件接口
